src/objects/MX_CashManagement__mdt.object
<CustomObject>
    <description>Metadatos personalizados para administración de componentes del proyecto CASH MANAGEMENT</description>
    <fields>
        <fullName>MX_CH_BEYG__c</fullName>
        <description>Funciones que integran los usuarios con nivel BEYG para el componente TAMS.
NOTA: Agregar solo los nombres API de las funciones.</description>
        <inlineHelpText>Funciones BEYG que podrán hacer uso de la ficha transaccional.</inlineHelpText>
        <label>Funciones BEYG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BBVAADMINISTRADOR</fullName>
                </value>
                <value>
                    <fullName>BBVAADMINISTRADORTEST</fullName>
                    <isActive>false</isActive>
                    <label>BBVAADMINISTRADORTEST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CH_CR__c</fullName>
        <description>Funciones que integran las oficinas  para el componente TAMS.
NOTA: Agregar solo los nombres API de las funciones.</description>
        <inlineHelpText>Funciones oficinas que podrán hacer uso de la ficha transaccional.</inlineHelpText>
        <label>Funciones Oficinas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_AGUASCALIENTES</fullName>
                    <default>true</default>
                    <label>DIRECTOR_DE_OFICINA_EMPRESAS_AGUASCALIENTES</label>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_LEON</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_SAN_LUIS_POTOSI</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_AGUASCALIENTES</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_GUANAJUATO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_Y_EMPRESAS_ZACATECAS</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_PACHUCA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_QUERETARO_ALAMOS</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_QUERETARO_CONSTITUYENTES</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_Y_GOBIERNO_CELAYA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_Y_GOBIERNO_IRAPUATO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_PACHUCA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_QUERETARO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_SATELITE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_CENTRO_CORPORATIVO_MU_2</fullName>
                </value>
                <value>
                    <fullName>CENTRO_CORPORATIVO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_CENTRO_CORPORATIVO_SISTEMAS</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_CENTRO_CORPORATIVO_VALLE_BEISTEGUI</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_TOLUCA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_TLALNEPANTLA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_CHURUBUSCO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_FINANZAS_E_INFRAESTRUCTURA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_SECTOR_SALUD</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_SECTOR_DESARROLLO_SOCIAL</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_GOBIERNO_DF</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_SECTOR_EDUCACION</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_SECTOR_INSTITUCIONES</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_AVILA_CAMACHO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_DF_FELIX_CUEVAS</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_OFICINA_EMPRESAS_DF_LOMAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CH_DIV__c</fullName>
        <description>Funciones que integran las divisiones para el componente TAMS.
NOTA: Agregar solo los nombres API de las funciones.</description>
        <inlineHelpText>Funciones divisionales que podrán hacer uso de la ficha transaccional.</inlineHelpText>
        <label>Funciones Divisionales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIVISI_N_BAJIO</fullName>
                    <default>true</default>
                    <label>DIVISI_N_BAJIO</label>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_BAJIO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_BAJIO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_BAJIO_1</fullName>
                </value>
                <value>
                    <fullName>DIVISI_N_CORPORATIVA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_CORPORATIVA</fullName>
                </value>
                <value>
                    <fullName>DIVISI_N_GOBIERNO1</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_GOBIERNO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_GOBIERNO</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_GOBIERNO_2</fullName>
                </value>
                <value>
                    <fullName>DIVISI_N_METROPOLITANA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_METRO_1</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_METRO_2</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_METRO_3</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_METROPOLITANA</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_MEDIANA_EMPRESA</fullName>
                </value>
                <value>
                    <fullName>DIVISI_N_NORESTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_NORESTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_NORESTE_2</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_NORESTE</fullName>
                </value>
                <value>
                    <fullName>DIVISI_N_NOROESTE</fullName>
                </value>
                <value>
                    <fullName>CAZADOR_NOROESTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_NOROESTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_NOROESTE_1</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_NOROESTE_2</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_NOROESTE_3</fullName>
                </value>
                <value>
                    <fullName>DIVISI_N_OCCIDENTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DE_REGIONAL_OCCIDENTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_DIVISIONAL_OCCIDENTE</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR_REGIONAL_2_OCCIDENTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_CH_UG__c</fullName>
        <description>Funciones que integran a los ejecutivos  para el componente TAMS 
NOTA: Agregar solo los nombres API de las funciones.</description>
        <inlineHelpText>Funciones para ejecutivos que podrán hacer uso de la ficha transaccional.</inlineHelpText>
        <label>Funciones Ejecutivos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_AGUASCALIENTES</fullName>
                    <default>true</default>
                    <label>EJECUTIVO_EMPRESAS_AGUASCALIENTES</label>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_LEON</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_SAN_LUIS_POTOSI</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_AGUASCALIENTES</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_GUANAJUATO</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_Y_EMPRESAS_ZACATECAS</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_PACHUCA</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_QUERETARO_ALAMOS</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_QUERETARO_CONSTITUYENTES</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_Y_GOBIERNO_CELAYA</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_Y_GOBIERNO_IRAPUATO</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_PACHUCA</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_QUERETARO</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_SATELITE</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_CENTRO_CORPORATIVO_MU_2</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_CENTRO_CORPORATIVO_MONTES_URALES</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_CENTRO_CORPORATIVO_SISTEMAS</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_CENTRO_CORPORATIVO_VALLE_BEISTEGUI</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_ESTADO_DE_MEXICO</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_TLALNEPANTLA</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_CHURUBUSCO</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_FINANZAS_E_INFRAESTRUCTURA</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_SECTOR_SALUD</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_SECTOR_DESARROLLO_SOCIAL</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_GOBIERNO_DF</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_SECTOR_EDUCACION</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_SECTOR_INSTITUCIONES</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_AVILA_CAMACHO</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_DF_FELIX_CUEVAS</fullName>
                </value>
                <value>
                    <fullName>EJECUTIVO_EMPRESAS_DF_LOMAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MX_CashManagement</label>
    <pluralLabel>MX_CashManagements</pluralLabel>
</CustomObject>